--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "prettier": "3.2.4",
     "typescript": "5.3.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Tripletex-AS/atl-autocomplete"
+  }
 }
